# DynamicMPNN

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/dynamicmpnn/: __init__.py  constants.py  evaluate.py  train.py  types.py
src/dynamicmpnn/configs/: dynamicmpnn.yaml  evaluate.yaml
src/dynamicmpnn/configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  stop_on_nan.yaml
src/dynamicmpnn/configs/dataset/: pdb.yaml  pdb_single.yaml
src/dynamicmpnn/configs/eval/: 1b6h_1rkm.yaml  1bdt_1qtg.yaml  1cfc_5dow.yaml  1dmo_3cln.yaml  1ebo_5fhc.yaml  1eqm_2f63.yaml  1ex6_1ex7.yaml  1h38_1qln.yaml  1j9o_2jp1.yaml  1jfj_1jfk.yaml  1jfk_2nxq.yaml  1jm4_1wum.yaml  (+84 more)
src/dynamicmpnn/data/: test_pts_single.csv  test_set.csv  train_seq80_pool_filtered.csv  train_seq80_pool_filtered_mintm.csv  train_single_chain_pool.csv  val_pts.csv  val_set.csv
src/dynamicmpnn/datamodules/: base.py  datamodule.py  pt_dataset.py  sampler.py  utils.py  utils_mmcif.py  utils_mmcif_single.py
src/dynamicmpnn/eval/: __init__.py  af3.py  aggregation.py  inputs.py  pipeline.py  sampling.py  scoring.py  structure_utils.py  templates.py  types.py
src/dynamicmpnn/features/: edge_features.py  edges.py  featurizer.py  node_features.py  utils.py
src/dynamicmpnn/scripts/: README.md
src/dynamicmpnn/utils/: __init__.py  callbacks.py  extras.py  loggers.py  logging_utils.py  memory_utils.py  rich_utils.py
tests/: test_af3_json.py  test_bundled_eval_cases.py  test_decoy_aggregation.py  test_eval_inputs.py  test_publication_hygiene.py  test_scoring.py
(+46 files in other folders)
